1.5
- tool-buttons got icons instead of symbols
- added button to add a directory of mods
- added button to create a new config from an existing one
- added launch modes for recording/replaying demos
- fixed non-existing mod file not being correctly removed from the list

1.4
- added new launch options for video, audio and save/screenshot directory
- added tooltips for some of the launch options
- map names are now extracted from IWAD file instead of guessing them from IWAD name
- added confirmation dialog when attempted to delete a preset
- enabled keyboard control (Enter, Insert, Delete, CTRL+arrows)
- right-click inside an editable list widget pops-up a context menu with available actions
- added "close on launch" option
- before launch, the current directory is changed to engine's directory, improving compatibility with some engines
- options.json is now saved into /home/user/.config/DoomRunner in Linux
- bugfixes related to config file selection

1.3.3
- fixed deh recognition for map packs
- added recognition of bex files

1.3.2
- fixed incorrect restoration of selected config when clicked on a preset

1.3.1
- IWADs are distinguished from PWADs again by filename suffix and no longer by file header
- fixed unnecessary disk reading when path to map directory is empty
- slightly more robust options loading

1.3
- for each engine you can now set custom directory of config files (required for using it on Linux)
- you can now select multiple map files, but they will always be loaded in alphabetical order
- selected map files are now saved to presets instead of globally
- line for additional command line arguments has been split to preset-related and global one
- you can now select whether "Launch options" should be saved globally or to presets
- you can now drag&drop also in Setup dialog to IWAD list and Engine list
- when using manual IWAD management mode, you can now give each IWAD a custom name by double-clicking on it in Setup dialog